--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
 
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="https://github.com/Krytax-24/Slithering-Serpent-Classic-Snake-Game/blob/main/CSS/style.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="https://github.com/Krytax-24/Slithering-Serpent-Classic-Snake-Game/blob/main/js/script.js"></script>
 
 
 </body>
