--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <script src="https://github.com/Krytax-24/Slithering-Serpent-Classic-Snake-Game/blob/main/js/script.js"></script>
+    <script src="./js/script.js"></script>
 
 
 </body>
